--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - uses: pnpm/action-setup@v3
+        with:
+          version: 8
       - run: pnpm install --frozen-lockfile
       - run: pnpm prepare
       - run: pnpm typecheck
